# bevy-proto-render

./: Cargo.toml
crates/bevy-proto-render/: Cargo.toml
crates/bevy-proto-render/src/: lib.rs  render_resource.rs  renderer.rs  settings.rs  sync_world.rs
crates/frame-graph/: Cargo.toml
crates/frame-graph/src/: error.rs  lib.rs
crates/frame-graph/src/frame_graph/: device_pass.rs  graph.rs  pass_node.rs  render_context.rs  resource_table.rs
crates/frame-graph/src/frame_graph/resource/: mod.rs
crates/frame-graph/src/gfx_base/: bind_group_layout.rs  command_buffer.rs  device.rs  macros.rs  mod.rs  render_device.rs
crates/frame-graph/src/gfx_base/pipeline/: mod.rs  pipeline_cache.rs  render_pipeline.rs
crates/frame-graph/src/gfx_test/: command_buffer.rs  mod.rs  render_device.rs
crates/gfx-wgpu/: Cargo.toml
crates/gfx-wgpu/src/: bind_group.rs  buffer.rs  command_buffer.rs  lib.rs  mod.rs  render_device.rs  render_pipeline.rs
examples/: simple.rs
src/: error.rs  lib.rs
src/frame_graph/: graph.rs  mod.rs  pass_node.rs  pass_node_builder.rs  render_context.rs  resource_node.rs  resource_table.rs
src/frame_graph/resource/: mod.rs
src/gfx_base/: bind_group.rs  buffer.rs  command_buffer.rs  common.rs  handle.rs  macros.rs  mod.rs  render_device.rs
src/gfx_base/pipeline/: mod.rs
src/gfx_test/: command_buffer.rs  mod.rs  pipeline_cache.rs  render_device.rs
src/gfx_wgpu/: bind_group.rs  buffer.rs  command_buffer.rs  mod.rs  render_device.rs  render_pipeline.rs
