[package]
name = "bevy-proto-render"
version = "0.1.0"
edition = "2024"

[features]
# Bevy users should _never_ turn this feature on.
#
# Bevy/wgpu developers can turn this feature on to test a newer version of wgpu without needing to also update naga_oil.
#
# When turning this feature on, you can add the following to bevy/Cargo.toml (not this file), and then run `cargo update`:
# [patch.crates-io]
# wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
# wgpu-core = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
# wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
# wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
decoupled_naga = []

# Texture formats (require more than just image support)
basis-universal = ["bevy_image/basis-universal"]
exr = ["bevy_image/exr"]
hdr = ["bevy_image/hdr"]
ktx2 = ["dep:ktx2", "bevy_image/ktx2"]

multi_threaded = ["bevy_tasks/multi_threaded"]

shader_format_glsl = ["naga/glsl-in", "naga/wgsl-out", "naga_oil/glsl"]
shader_format_spirv = ["wgpu/spirv", "naga/spv-in", "naga/spv-out"]
shader_format_wesl = ["wesl"]

# Enable SPIR-V shader passthrough
spirv_shader_passthrough = ["wgpu/spirv"]

# Statically linked DXC shader compiler for DirectX 12
# TODO: When wgpu switches to DirectX 12 instead of Vulkan by default on windows, make this a default feature
statically-linked-dxc = ["wgpu/static-dxc"]

trace = ["profiling"]
tracing-tracy = ["dep:tracy-client"]
ci_limits = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
detailed_trace = []
[dependencies]
frame-graph = { path = "../frame-graph" }
gfx-wgpu = { path = "../gfx-wgpu" }

bevy_app = "=0.16.0-rc.5"
bevy_ecs = "=0.16.0-rc.5"
bevy_window = "=0.16.0-rc.5"
bevy_image = "=0.16.0-rc.5"
bevy_tasks = "=0.16.0-rc.5"
bevy_time = "=0.16.0-rc.5"
bevy_asset = "=0.16.0-rc.5"
bevy_derive = "=0.16.0-rc.5"
bevy_platform = "=0.16.0-rc.5"
bevy_reflect = "=0.16.0-rc.5"

wgpu = { version = "24", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
ktx2 = { version = "0.3.0", optional = true }
naga = { version = "24", features = ["wgsl-in"] }
naga_oil = { version = "0.17", default-features = false, features = [
    "test_shader",
] }
wesl = { version = "0.1.2", optional = true }
# For wgpu profiling using tracing. Use `RUST_LOG=info` to also capture the wgpu spans.
profiling = { version = "1", features = [
    "profile-with-tracing",
], optional = true }
tracy-client = { version = "0.18.0", optional = true }
futures-lite = "2.0.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
